--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ left: 36.67%;
 right: 37.43%;
 top: 0%;
 bottom: 0%;
-
 left: 84px;
 top: 40px;
 
@@ -40,6 +39,8 @@ div{
 }
 
 #texto1{
+border: none;
+outline: none;
 position: absolute;
 width: 577px;
 height: 48px;
@@ -51,13 +52,10 @@ font-style: normal;
 font-weight: 400;
 font-size: 32px;
 line-height: 150%;
-
 /* identical to box height, or 48px */
-
 /* Dark blue/dark-blue-300 */
 color: #0A3871;
 }
-
 
 .divbutton{
     margin-top: 380px;
@@ -70,18 +68,15 @@ color: #0A3871;
 width: 205px;
 height: 18px;
 */
-
 font-family: 'Inter';
 font-style: normal;
 font-weight: 400;
 font-size: 12px;
 line-height: 150%;
-
 /* identical to box height, or 18px */
 
 /* Gray/gray-400 */
 color: #495057;
-
 opacity: 0.8;
 
 /* Inside auto layout 
@@ -97,7 +92,6 @@ line-height: 150%;
 
 .button{
 /* Button */
-
 /* Auto layout */
 display: flex;
 flex-direction: row;
@@ -137,7 +131,6 @@ height: 500px;
 left: 1000px;
 top: 40px;
 
-
 /* White */
 background: #FFFFFF;
 
@@ -145,15 +138,13 @@ background: #FFFFFF;
 box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
 border-radius: 32px;
 
-
 display: flex;
 align-items: center;
 flex-direction: column;
-
 }
 
 #resultado{
-    
+display: none;
 font-family: 'Inter';
 font-style: normal;
 font-weight: 400;
@@ -164,10 +155,12 @@ line-height: 150%;
 
 /* Gray/gray-400 */
 color: #495057;
+border: none;
+outline: none;
 }
 
 #mensaje2 {
-    font-family: 'Inter';
+font-family: 'Inter';
 font-style: normal;
 font-weight: 700;
 font-size: 24px;
@@ -179,7 +172,6 @@ text-align: center;
 /* Gray/gray-500 */
 color: #343A40;
 
-
 /* Inside auto layout */
 flex: none;
 order: 0;
@@ -188,7 +180,7 @@ flex-grow: 0;
 }
 
 #mensaje3 {
-    font-family: 'Inter';
+font-family: 'Inter';
 font-style: normal;
 font-weight: 400;
 font-size: 16px;
@@ -200,7 +192,6 @@ text-align: center;
 /* Gray/gray-400 */
 color: #495057;
 
-
 /* Inside auto layout */
 flex: none;
 order: 1;
@@ -209,26 +200,24 @@ flex-grow: 0;
 }
 
 #buttoncopiar{
-    /*display: none;*/
-    bottom: 0;
-    max-width: 200px;
-    
-    margin-top: 50px;
-    width: 328px;
-    height: 67px;
-    
-    top: 40px;
+display: none;
+bottom: 0;
+max-width: 200px;
 
-    padding: 24px;
-    gap: 8px;
+margin-top: 50px;
+width: 328px;
+height: 67px;
+top: 40px;
 
-    vertical-align: bottom;
-    
+padding: 24px;
+gap: 8px;
 
-    /* White */
-    background: #FFFFFF;
+vertical-align: bottom;
 
-    /* shadow */
-    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
-    border-radius: 32px;
+/* White */
+background: #FFFFFF;
+
+/* shadow */
+box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+border-radius: 32px;
 }
