--- a/style.css
+++ b/style.css
@@ -1,255 +1,270 @@
-body{
+body {
 /* Encriptador - 1 Desktop */
-
 /*
 position: relative;
 width: 1440px;
 height: 1024px;
 */
-
-/* Light blue/light-blue-100 */
 background: #F3F5FC;
 }
 
-.logo-principal{
-position: absolute;
-left: 36.67%;
-right: 37.43%;
-top: 0%;
-bottom: 0%;
-left: 84px;
-top: 40px;
-
-/* Dark blue/dark-blue-300 */
-/*background: #0A3871;*/
+* {
+    background: #F3F5FC;
+    font-family: 'Inter';
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 150%; 
 }
 
-/*
-h1{
-    height: 150px;
-    border: 10px solid black;
-    padding: 20px;
-    margin: 40px;
-    text-align: center;
+.logo-principal {
+    position: absolute;
+    left: 36.67%;
+    right: 37.43%;
+    top: 0%;
+    bottom: 0%;
+    left: 84px;
+    top: 40px;
 }
-*/
 
 div{
     top: 40px;
 }
 
-#texto1{
-border: none;
-outline: none;
-position: absolute;
-width: 577px;
-height: 48px;
-left: 240px;
-top: 168px;
+#texto1 {
+    border: none;
+    color: #0A3871;
+    outline: none;
+    position: absolute;
+    width: 577px;
+    height: 48px;
+    left: 240px;
+    top: 168px;
 
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 32px;
-line-height: 150%;
-/* identical to box height, or 48px */
-/* Dark blue/dark-blue-300 */
-color: #0A3871;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 150%;
+    /* identical to box height, or 48px */
+    /* Dark blue/dark-blue-300 */
+    
 
-/* AUTOSIZE EN TEXTAREA */
-resize: none;
-max-height: 276px;
+    /* AUTOSIZE EN TEXTAREA */
+    resize: none;
+    max-height: 276px;
+    text-transform: lowercase;
+}
+
+::placeholder {color: #0A3871}
+.text-area:focus{
+    outline: none;
 }
 
 /* AUTOSIZE EN TEXTAREA */
-texto1:is(:focus, :valid){
+texto1:is(:focus, :valid) {
     border-width: 2px;
     padding: 14px;
     border-color: #4671EA;
 }
 
 /* AUTOSIZE EN TEXTAREA */
-texto1::-webkit-scrollbar{
+texto1::-webkit-scrollbar {
     width: 0px;
 }
 
-.divbutton{
+.divbutton {
     margin-top: 380px;
     margin-left: 240px;
     display: inline-block;
 }
 
 #mensaje1 {
-/*
-width: 205px;
-height: 18px;
-*/
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 150%;
-/* identical to box height, or 18px */
+    /*
+    width: 205px;
+    height: 18px;
+    */
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+    /* identical to box height, or 18px */
 
-/* Gray/gray-400 */
-color: #495057;
-opacity: 0.8;
+    /* Gray/gray-400 */
+    color: #495057;
+    opacity: 0.8;
 
-/* Inside auto layout 
-flex: none;
-order: 1;
-flex-grow: 0;
-*/
-position: absolute;
-left: 240px;
-top: 450px;
-line-height: 150%;
+    /* Inside auto layout 
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    */
+    position: absolute;
+    left: 240px;
+    top: 450px;
+    line-height: 150%;
 }
 
-.button{
-/* Button */
-/* Auto layout */
-display: flex;
-flex-direction: row;
-align-items: flex-start;
-padding: 24px;
-gap: 8px;
+.button {
+    /* Button */
+    /* Auto layout */
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 24px;
+    gap: 8px;
 
-width: 328px;
-height: 67px;
+    width: 328px;
+    height: 67px;
 
-/* Dark blue/dark-blue-300 */
-background: #0A3871;
-border-radius: 24px;
+    /* Dark blue/dark-blue-300 */
+    background: #0A3871;
+    border-radius: 24px;
 
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 19px;
-text-align: center;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
 
-/* White */
-color: #FFFFFF;
+    /* White */
+    color: #FFFFFF;
 
-/* Inside auto layout */
-flex: none;
-order: 0;
-flex-grow: 0;
-display: inline-block;
+    /* Inside auto layout */
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    display: inline-block;
 }
-
 
 button:hover {
-background: #072B61;
-transform: scale(1.02);
+    background: #072B61;
+    transform: scale(1.02);
     /*transform: rotate(70deg);*/
-    
 }
-
 
 .rectangulo {
-border: 10px solid white;
-position: absolute;
-width: 300px;
-height: 500px;
-left: 1000px;
-top: 40px;
+    border: 10px solid white;
+    position: absolute;
+    width: 330px;
+    height: 500px;
+    left: 1000px;
+    top: 40px;
 
-/* White */
-background: #FFFFFF;
+    /* White */
+    background: #FFFFFF;
 
-/* shadow */
-box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
-border-radius: 32px;
+    /* shadow */
+    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+    border-radius: 32px;
 
-display: flex;
-align-items: center;
-flex-direction: column;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
-#resultado{
-display: none;
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 24px;
-line-height: 150%;
+#elementosinicio{
+    background: white;
+}
 
-/* or 36px */
+#muñeco{
+    background: white;
+}
 
-/* Gray/gray-400 */
-color: #495057;
-border: none;
-outline: none;
+#resultado {
+    display: none;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 150%;
+
+    /* or 36px */
+
+    /* Gray/gray-400 */
+    color: #495057;
+    border: none;
+    outline: none;
+    background: white;
 }
 
 #mensaje2 {
-font-family: 'Inter';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 120%;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 120%;
 
-/* or 29px */
-text-align: center;
+    /* or 29px */
+    text-align: center;
 
-/* Gray/gray-500 */
-color: #343A40;
+    /* Gray/gray-500 */
+    color: #343A40;
 
-/* Inside auto layout */
-flex: none;
-order: 0;
-align-self: stretch;
-flex-grow: 0;
+    /* Inside auto layout */
+    flex: none;
+    order: 0;
+    align-self: stretch;
+    flex-grow: 0;
+    background: white;
 }
 
 #mensaje3 {
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 150%;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
 
-/* or 24px */
-text-align: center;
+    /* or 24px */
+    text-align: center;
 
-/* Gray/gray-400 */
-color: #495057;
+    /* Gray/gray-400 */
+    color: #495057;
 
-/* Inside auto layout */
-flex: none;
-order: 1;
-align-self: stretch;
-flex-grow: 0;
+    /* Inside auto layout */
+    flex: none;
+    order: 1;
+    align-self: stretch;
+    flex-grow: 0;
+    background: white;
 }
 
-#buttoncopiar{
-display: none;
-bottom: 0;
-max-width: 200px;
+#buttoncopiar {
+    display: none;
+    resize: none;
+    bottom: 0;
+    max-width: 200px;
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
 
-margin-top: 50px;
-width: 328px;
-height: 67px;
-top: 40px;
+    color: #0A3871;
 
-padding: 24px;
-gap: 8px;
+    margin-top: 50px;
+    width: 328px;
+    height: 67px;
+    top: 40px;
 
-vertical-align: bottom;
+    padding: 24px;
+    gap: 8px;
 
-/* White */
-background: #FFFFFF;
+    vertical-align: bottom;
 
-/* shadow */
-box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
-border-radius: 32px;
-}
+    /* White */
+    background: #FFFFFF;
 
-@media screen and (max-width:480px){
+    /* shadow */
     
-    #texto1, #mensaje1 {
+    border: 1px solid #0A3871;
+    border-radius: 24px;
+    line-height: 0%;
+}
+
+@media screen and (max-width:480px) {
+     #texto1, #mensaje1 {
         left: 20px;
     }
     #texto1{
